--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -31,3 +31,104 @@ body {
   color: var(--color-white);
   background-color: var(--color-black);
 }
+
+/* Typography */
+
+h1 {
+  font-size: 3.2rem;
+  font-weight: bolder;
+  line-height: 40px;
+  margin-bottom: 2.4rem;
+}
+
+h2 {
+  font-size: 1.8rem;
+  margin-bottom: 1.1rem;
+}
+
+h1 span {
+  color: var(--color-primary);
+}
+
+p {
+  color: var(--color-dark-grey);
+  font-size: 1.5rem;
+  line-height: 25px;
+}
+
+/* Nav */
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 6.55rem;
+  padding-top: 4rem;
+}
+
+/* Hero */
+
+.hero {
+  margin-bottom: 14.4rem;
+}
+
+.hero__image--mobile {
+  margin-bottom: 4.75rem;
+}
+
+.hero__image--mobile img {
+  height: 232px;
+  width: 100%;
+}
+
+.hero__image--left {
+  display: none;
+}
+
+.hero__image--right {
+  display: none;
+}
+
+.hero__text {
+  padding: 0 2.4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.hero__text p {
+  margin-bottom: 2.4rem;
+}
+
+/* Main */
+
+main {
+  padding: 0 2.4rem;
+}
+
+/* Features */
+
+.features {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.feature {
+  text-align: center;
+}
+
+.feature img {
+  background-color: var(--color-dark-blue);
+  border-radius: 45px;
+  padding: 2.8rem 3.2rem;
+  margin-bottom: 3.2rem;
+}
+
+.feature--1,
+.feature--2,
+.feature--3 {
+  margin-bottom: 5.6rem;
+}
