--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -179,8 +179,34 @@ main {
 }
 
 .prices__card p {
+  color: var(--color-white);
   font-size: 1.5rem;
   margin-bottom: 2.4rem;
+}
+
+.prices__card h4 {
+  font-size: 4rem;
+  margin-bottom: 1.9rem;
+  display: flex;
+  align-items: center;
+}
+
+.prices__card span {
+  font-size: 1.4rem;
+  margin-left: 0.75rem;
+}
+
+.prices__card ul {
+  list-style: none;
+}
+
+.prices__card li {
+  font-size: 1.4rem;
+  margin-bottom: 1.2rem;
+}
+
+.prices__card li img {
+  margin-right: 1.5rem;
 }
 
 .prices__card--1 {
@@ -199,4 +225,8 @@ main {
   position: absolute;
   top: -10%;
   margin-bottom: 2.6rem;
+}
+
+.prices__card--2 p {
+  color: var(--color-black);
 }
