--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -143,6 +143,7 @@ main {
 
 .prices {
   text-align: center;
+  margin-bottom: 14.5rem;
 }
 
 .prices p {
@@ -229,4 +230,66 @@ main {
 
 .prices__card--2 p {
   color: var(--color-black);
+}
+
+/* Footer */
+
+footer {
+  padding: 0 2.4rem;
+  margin-bottom: 16.4rem;
+}
+
+footer div {
+  text-align: center;
+  position: relative;
+}
+
+footer div img {
+  z-index: -1;
+  width: 100%;
+  height: 80px;
+  position: absolute;
+  top: -10%;
+  left: 0;
+}
+
+footer form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 3.2rem;
+}
+
+form input {
+  background-color: var(--color-dark-blue);
+  font-size: 1.5rem;
+  border-radius: 2.4rem;
+  border: none;
+  width: 100%;
+  padding: 1.2rem 1.8rem;
+  margin-bottom: 2.4rem;
+}
+
+form input::placeholder {
+  color: var(--color-dark-grey);
+  font-size: 1.5rem;
+  list-style: 100px;
+  font-weight: bolder;
+}
+
+form input:active,
+form input:focus {
+  border: var(--color-primary);
+}
+
+form button {
+  color: var(--color-dark-blue);
+  font-size: 1.5rem;
+  font-weight: bolder;
+  background-color: var(--color-primary);
+  border: none;
+  border-radius: 2.4rem;
+  width: 100%;
+  padding: 1.2rem 4.2rem;
 }
